# AI-Virtual-Metrology-

./: .gitignore  Dockerfile  README.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/data/: __init__.py  store.py
backend/app/drift/: __init__.py  detection.py
backend/app/features/: __init__.py  engineering.py
backend/app/models/: __init__.py  inference.py  registry.py  training.py  uncertainty.py
backend/app/simulation/: __init__.py  noise.py  process.py  quality.py  sensors.py
frontend/: .env.example  next.config.js  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/drift/: page.tsx
frontend/src/app/metrology/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/visualization/: page.tsx
frontend/src/components/charts/: confidence-band.tsx  drift-chart.tsx  prediction-chart.tsx  timeseries-chart.tsx
frontend/src/components/dashboard/: kpi-cards.tsx  quality-gauge.tsx  run-table.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx  theme-provider.tsx
frontend/src/components/metrology/: confidence-indicator.tsx  defect-gauge.tsx  live-prediction.tsx
frontend/src/components/three/: coating-scene.tsx
frontend/src/components/ui/: badge.tsx  dropdown-menu.tsx  (+2 more)
frontend/src/hooks/: use-drift.ts  use-prediction.ts  use-runs.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
(+1 files in other folders)
